<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primary_dark_material_dark"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/default_background"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/ci_connected_textview"
                style="@style/HT_FontBar"
                android:text="@string/default_connected"
                android:layout_alignParentLeft="true"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/ns_filter_textview"
                style="@style/HT_FontBar"
                android:text="@string/ci_filter_bar"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/ci_channel_textview"
                style="@style/HT_FontBar"
                android:text="@string/default_channel"
                android:layout_alignParentLeft="true"
                android:padding="2dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/ci_numbers_of_networks_on_this_ch_textview"
                style="@style/HT_FontBar"
                android:text="@string/default_networks_on_this_channel"
                android:layout_alignParentRight="true"
                android:padding="2dp"
                />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/ci_valuation_bar_static_textview"
                style="@style/HT_FontBar"
                android:text="@string/ci_valuation_static_bar"
                android:layout_alignParentLeft="true"
                android:padding="2dp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <ProgressBar
                    android:id="@+id/ci_valuation_progressbar"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:paddingLeft="7dp"
                    android:paddingRight="10dp"
                    android:progressDrawable="@drawable/green_progress_bar"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style ="@style/Standard_Font"
                    android:text=""
                    android:singleLine="true"
                    android:id="@+id/ci_valuation_progressbar_textView"
                    android:background="#00000000"
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:id="@+id/ci_recommended_textview"
                style="@style/HT_FontBar"
                android:text="@string/default_recommended"
                android:layout_alignParentLeft="true"
                android:padding="2dp"
                />

        </LinearLayout>

    </LinearLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:scrollbarStyle="insideInset"
                android:id="@+id/ci_scrollView"
                android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/ci_channel_chart"
                android:orientation="vertical"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/dark_yellow"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                >


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:singleLine="true"
                    android:id="@+id/ci_channel_static_textview"
                    style="@style/HT_FontBar"
                    android:text="@string/ci_channel_static_textview"
                    android:padding="2dp"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:singleLine="true"
                    android:id="@+id/ci_valuation_static_textview"
                    style="@style/HT_FontBar"
                    android:text="@string/ci_valuation_static_textview"
                    android:padding="2dp"
                    android:gravity="center"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.35"
                    android:singleLine="true"
                    android:id="@+id/ci_channel_recommended_static_textview"
                    style="@style/HT_FontBar"
                    android:text="@string/ci_channel_recommended_static_textview"
                    android:padding="2dp"
                    android:paddingRight="4dp"
                    android:gravity="right"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:singleLine="true"
                    android:id="@+id/ci_networks_static_textview"
                    style="@style/HT_FontBar"
                    android:text="@string/ci_networks_static_textview"
                    android:padding="0dp"
                    android:gravity="left"
                    />
                
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/dark_yellow"/>

            <ListView
                style="@style/NetworksListStyle"
                android:id="@+id/valuation_channels_listview"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:padding="5dp"
                android:divider="@drawable/divider"
                android:dividerHeight="1px"
                />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dark_yellow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/ci_scroll_info_static_textview"
            style="@style/HT_FontBar"
            android:text="@string/ci_scroll_info_static_textview"
            android:padding="5dp"
            android:gravity="center"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/dark_yellow"/>

    </LinearLayout>

</LinearLayout>
